se  agrego el ratiing por departamento

--- a/departamentoRH.html
+++ b/departamentoRH.html
@@ -2,6 +2,8 @@
 <html lang="es">
 
 <head>
+    <!--icono de la pagina-->
+    <link rel="shortcut icon" href="img/logoAlfonsoMArina.jpg" type="image/x-icon">
     <meta charset="UTF-8">
     <title>Recursos Humanos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -69,7 +71,7 @@
             <div class="right">
                 <div class="acerca-img"><img src="img/Planeación.jpg"></div>
                 <div class="info">
-                    <h2>planeación de Recursos Humanos.</h2>
+                    <h2>Planeación de Recursos Humanos.</h2>
                     <p>La planeación del área de Recursos Humanos es un proceso que requiere de la selección de personal
                         adecuado para cada puesto de trabajo.
                     </p>
@@ -77,9 +79,7 @@
 
                 </div>
             </div>
-            <div class="read-more"><a href="http://cbtis41.com.mx/pdf/tutorias2.pdf" target="_blank"
-                    rel="nofollow noopener">Saber mas</a></div>
-
+            
         </section>
 
         <!-- Acerca de -->
@@ -170,8 +170,10 @@
                     </div>
                     <img src="img/gerentes.jpg">
                 </div>
-
             </div>
+
+            <div class="read-more"><a href="ratingRH.php" >Califícanos.</a></div>
+
 
         </section>
 
@@ -219,10 +221,10 @@
                 <div class="Octavio-container">
                     <div class="card">
                         <div class="Octavio-img">
-                            <img src="img/user.png">
+                            <img src="img/Octavio.png">
                         </div>
                         <h2>José Octavio Cárdenas González</h2>
-                        <a href="#" rel="nofollow noopener" target="_blank">Saber mas</a>
+                        <a href="https://www.linkedin.com/in/octavio-c%C3%A1rdenas-gonz%C3%A1lez-aa8a54195/" rel="nofollow noopener" target="_blank">Saber mas</a>
                     </div>
                 </div>
 
