--- a/departamentoTI.html
+++ b/departamentoTI.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>TI</title>
+    <!--icono de la pagina-->
+    <link rel="shortcut icon" href="img/logoAlfonsoMArina.jpg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles2.css">
@@ -120,11 +122,10 @@
                             Recepción de fallas de hardware en servidores, PC e impresoras.</p>
                     </div>
                     <img src="img/Soporte_basico.jpg">
-                </div>
-
-                
-
+                </div>                
             </div>
+
+            <div class="read-more"><a href="ratingTI.php" >Califícanos.</a></div>
 
         </section>
 
@@ -172,10 +173,10 @@
                 <div class="Octavio-container">
                     <div class="card">
                         <div class="Octavio-img">
-                            <img src="img/user.png">
+                            <img src="img/Octavio.png">
                         </div>
                         <h2>José Octavio Cárdenas González</h2>
-                        <a href="#" rel="nofollow noopener" target="_blank">Saber mas</a>
+                        <a href="https://www.linkedin.com/in/octavio-c%C3%A1rdenas-gonz%C3%A1lez-aa8a54195/" rel="nofollow noopener" target="_blank">Saber mas</a>
                     </div>
                 </div>
 
