--- a/departamentoVentas.html
+++ b/departamentoVentas.html
@@ -2,6 +2,9 @@
 <html lang="es">
 
 <head>
+
+    <!--icono de la pagina-->
+    <link rel="shortcut icon" href="img/logoAlfonsoMArina.jpg" type="image/x-icon">
     <meta charset="UTF-8">
     <title>Ventas</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -118,11 +121,10 @@
                             a obtener el producto o servicio.</p>
                     </div>
                     <img src="img/promoempresas.webp">
-                </div>
-
-                
-
+                </div> 
             </div>
+
+            <div class="read-more"><a href="ratingVentas.php" >Califícanos.</a></div>
 
         </section>
 
@@ -170,10 +172,10 @@
                 <div class="Octavio-container">
                     <div class="card">
                         <div class="Octavio-img">
-                            <img src="img/user.png">
+                            <img src="img/Octavio.png">
                         </div>
                         <h2>José Octavio Cárdenas González</h2>
-                        <a href="#" rel="nofollow noopener" target="_blank">Saber mas</a>
+                        <a href="https://www.linkedin.com/in/octavio-c%C3%A1rdenas-gonz%C3%A1lez-aa8a54195/" rel="nofollow noopener" target="_blank">Saber mas</a>
                     </div>
                 </div>
 
