--- a/departamentoFinanzas.html
+++ b/departamentoFinanzas.html
@@ -2,6 +2,8 @@
 <html lang="es">
 
 <head>
+    <!--icono de la pagina-->
+    <link rel="shortcut icon" href="img/logoAlfonsoMArina.jpg" type="image/x-icon">
     <meta charset="UTF-8">
     <title>Finanzas</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -65,6 +67,7 @@
                 <div class="acerca-img"><img src="img/finanzas.jpeg"></div>
             </div>
 
+            
 
         </section>
 
@@ -132,10 +135,9 @@
                     </div>
                     <img src="img/analisis.jpg">
                 </div>
-
-                
-
             </div>
+
+            <div class="read-more"><a href="ratingFinanzas.php" >Califícanos.</a></div>
 
         </section>
 
@@ -183,10 +185,10 @@
                 <div class="Octavio-container">
                     <div class="card">
                         <div class="Octavio-img">
-                            <img src="img/user.png">
+                            <img src="img/Octavio.png">
                         </div>
                         <h2>José Octavio Cárdenas González</h2>
-                        <a href="#" rel="nofollow noopener" target="_blank">Saber mas</a>
+                        <a href="https://www.linkedin.com/in/octavio-c%C3%A1rdenas-gonz%C3%A1lez-aa8a54195/" rel="nofollow noopener" target="_blank">Saber mas</a>
                     </div>
                 </div>
 
