se termino la interfaz del team mate

--- a/departamentoFinanzas.html
+++ b/departamentoFinanzas.html
@@ -77,15 +77,15 @@
 
         <section class="team-pets">
 
-            <h2> funciones del departamento financiero</h2>
-            <h2>Alfonso Miranda.</h2>
+            <h2> Funciones del departamento financiero</h2>
+            <h2>Alfonso Marina.</h2>
 
             <div class="content-cards">
 
                 <div class="card">
                     <div class="card-content">
                         <h4>Consultoría y análisis de presupuestos:</h4>
-                        <p>los presupuestos son indispensables para el área en cuestión, 
+                        <p>Los presupuestos son indispensables para el área en cuestión, 
                             ya que establecen una relación directa con los ingresos y los gastos de la empresa. 
                                 
                         </p>
@@ -97,7 +97,7 @@
                     <div class="card-content">
                         <h4>Estructurar de forma conveniente los planes financieros:</h4>
                         <p>
-                            un buen responsable financiero tendrá la tarea de diseñar las estrategias
+                            Un buen responsable financiero tendrá la tarea de diseñar las estrategias
                             que se aplicarán en la empresa.
                         </p>
                     </div>
@@ -106,9 +106,9 @@
 
                 <div class="card">
                     <div class="card-content">
-                        <h4>Pago de salarios de los trabajadores::</h4>
+                        <h4>Pago de salarios de los trabajadores:</h4>
                         <p>
-                            al ser cancelaciones de obligaciones que se realizan de forma continua y 
+                            Al ser cancelaciones de obligaciones que se realizan de forma continua y 
                             en ciertos casos no se proceden a realizarse de manera automática, 
                             el área financiera quien se encarga de llevar a cabo esta tarea. 
                         </p>
@@ -119,7 +119,7 @@
                 <div class="card">
                     <div class="card-content">
                         <h4>Administración de financiaciones e inversiones:</h4>
-                        <p>una de las responsabilidades que lleva este departamento y que tiene un gran valor, 
+                        <p>Una de las responsabilidades que lleva este departamento y que tiene un gran valor, 
                             es la de tener la habilidad de saber invertir los beneficios que se hayan obtenido.</p>
                     </div>
                     <img src="img/administracion.jpg">
@@ -128,7 +128,7 @@
                 <div class="card">
                     <div class="card-content">
                         <h4>Análisis de las problemáticas financieras:</h4>
-                        <p>si bien el administrador financiero tiene la inconmensurable tarea de administrar los ingresos y egresos, 
+                        <p>Si bien el administrador financiero tiene la inconmensurable tarea de administrar los ingresos y egresos, 
                             de la reinversión y analizar dónde invertir los activos, 
                             una de las tareas que más se tiene en cuenta, 
                             es la de analizar las diversas problemáticas.</p>
@@ -165,20 +165,20 @@
                 <div class="Betzy-container">
                     <div class="card">
                         <div class="Betzy-img">
-                            <img src="img/user.png">
+                            <img src="img/Betzy.jpg">
                         </div>
-                        <h2>Betzy Elizabeth Flores Moreno.</h2>
-                        <a href="#" target="_blank" rel="nofollow noopener">Saber mas</a>
+                        <h2>Betzy Elizbeth Flores Moreno.</h2>
+                        <a href="https://www.linkedin.com/in/betzy-flores-6128a2225/" target="_blank" rel="nofollow noopener" target="_blank" rel="nofollow noopener">Saber mas</a>
                     </div>
                 </div>
 
                 <div class="Rachel-container">
                     <div class="card">
                         <div class="Rachel-img">
-                            <img src="img/user.png">
+                            <img src="img/Rachel.jpg">
                         </div>
                         <h2>Rachel Caroline López</h2>
-                        <a href="#">Saber mas</a>
+                        <a href="https://www.linkedin.com/in/rachel-caroline-lopez-islas-b2aa9921b/" rel="nofollow noopener" target="_blank">Saber mas</a>
                     </div>
                 </div>
 
