--- a/departamentoTI.html
+++ b/departamentoTI.html
@@ -87,15 +87,14 @@
                         <h4>Metodologías y Estándares:</h4>
                         <p>Incorporar estándares de calidad asociados a Tecnologías de Información y Comunicación que permitan realizar mejoras continuas en los procesos de la Dirección del Trabajo.
                             Coordinar y velar por el cumplimiento de políticas e instrucciones gubernamentales dictadas en el ámbito de tecnologías de información y comunicación.
-                            Evaluar e incorporar nuevas tecnologías en la Dirección del Trabajo.
-                            </p>
+                        </p>
                     </div>
                     <img src="img/tics.jpg">
                 </div>
 
                 <div class="card">
                     <div class="card-content">
-                        <h4>Desarrllo:</h4>
+                        <h4>Desarrollo:</h4>
                         <p>Analizar, diseñar y desarrollar sistemas informáticos que requiera la Dirección del Trabajo.
                             Supervisar y participar en el desarrollo de sistemas informáticos que sean responsabilidad de contrapartes externas.
                             Supervisar y asesorar a la Jefatura del departamento. 
@@ -153,20 +152,20 @@
                 <div class="Betzy-container">
                     <div class="card">
                         <div class="Betzy-img">
-                            <img src="img/user.png">
+                            <img src="img/Betzy.jpg">
                         </div>
-                        <h2>Betzy Elizabeth Flores Moreno.</h2>
-                        <a href="#" target="_blank" rel="nofollow noopener">Saber mas</a>
+                        <h2>Betzy Elizbeth Flores Moreno.</h2>
+                        <a href="https://www.linkedin.com/in/betzy-flores-6128a2225/" target="_blank" rel="nofollow noopener">Saber mas</a>
                     </div>
                 </div>
 
                 <div class="Rachel-container">
                     <div class="card">
                         <div class="Rachel-img">
-                            <img src="img/user.png">
+                            <img src="img/Rachel.jpg">
                         </div>
                         <h2>Rachel Caroline López</h2>
-                        <a href="#">Saber mas</a>
+                        <a href="https://www.linkedin.com/in/rachel-caroline-lopez-islas-b2aa9921b/" rel="nofollow noopener" target="_blank">Saber mas</a>
                     </div>
                 </div>
 
