--- a/departamentoRH.html
+++ b/departamentoRH.html
@@ -201,20 +201,20 @@
                 <div class="Betzy-container">
                     <div class="card">
                         <div class="Betzy-img">
-                            <img src="img/user.png">
+                            <img src="img/Betzy.jpg">
                         </div>
-                        <h2>Betzy Elizabeth Flores Moreno.</h2>
-                        <a href="#" target="_blank" rel="nofollow noopener">Saber mas</a>
+                        <h2>Betzy Elizbeth Flores Moreno.</h2>
+                        <a href="https://www.linkedin.com/in/betzy-flores-6128a2225/" target="_blank" rel="nofollow noopener">Saber mas</a>
                     </div>
                 </div>
 
                 <div class="Rachel-container">
                     <div class="card">
                         <div class="Rachel-img">
-                            <img src="img/user.png">
+                            <img src="img/Rachel.jpg">
                         </div>
                         <h2>Rachel Caroline López</h2>
-                        <a href="#">Saber mas</a>
+                        <a href="https://www.linkedin.com/in/rachel-caroline-lopez-islas-b2aa9921b/" rel="nofollow noopener" target="_blank">Saber mas</a>
                     </div>
                 </div>
 
