se corrigieron bugs de departamentoTI.html

--- a/departamentoTI.html
+++ b/departamentoTI.html
@@ -84,9 +84,8 @@
 
                 <div class="card">
                     <div class="card-content">
-                        <h4>Metodologías y Estándares:</h4>
-                        <p>Incorporar estándares de calidad asociados a Tecnologías de Información y Comunicación que permitan realizar mejoras continuas en los procesos de la Dirección del Trabajo.
-                            Coordinar y velar por el cumplimiento de políticas e instrucciones gubernamentales dictadas en el ámbito de tecnologías de información y comunicación.
+                        <h4> Metodologías y Estándares:</h4>
+                        <p>Incorporar estándares de calidad asociados a Tecnologías de Información y Comunicación. 
                         </p>
                     </div>
                     <img src="img/tics.jpg">
